[package]
name = "caramuru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miette = { version = "5.10", features = ["fancy"] }
lalrpop-util = { version = "0.20", default-features = false, features = [
  "lexer",
  "unicode",
] }
thiserror = "1.0"
rinha = "0.0"

[build-dependencies]
lalrpop = "0.20"